Origin six codes

--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>OriginSix</title>
   </head>
   <body>
-    <!-- aaaaaaaa -->
-    <!-- commentario desnecessario -->
-    <h1>Hello World</h1>
+    <header id="header">
+      <nav class="container">
+        <a class="logo" href="#">Beauty<span>Bilu</span>.</a>
+        <div class="menu">...</div>
+      </nav>
+    </header>
+
+    <main>
+      <section class="section" id="home">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://s2.glbimg.com/2yK3rTPvEDofzpusIhAgrkasz9A=/e.glbimg.com/og/ed/f/original/2019/09/30/oriontree_fairbairn_960.jpg"
+            />
+          </div>
+          <div class="text">
+            <h1>Saúde natural para os seus cabelos</h1>
+            <p>
+              Um salão exclusivo em São Paulo, especializado em tratamentos
+              naturais.
+            </p>
+            <a href="#" class="button">Agendar um horário</a>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
