--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="">   
             </div>
             <div class="text">
-                <h1>Saúde natral para os seus cabelos</h1>
+                <h1>Saúdes natral para os seus cabelos</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat est animi sit in voluptatum ipsum, ut,
                 voluptas nemo, facilis alias modi explicabo deserunt officia vero at pariatu
                 </p>
