--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>OriginSix</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+
+    <title>BeutyBilu</title>
   </head>
   <body>
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">Beauty<span>Bilu</span>.</a>
-        <div class="menu">...</div>
+        <div>...</div>
       </nav>
     </header>
 
@@ -29,7 +34,7 @@
             />
           </div>
           <div class="text">
-            <h1>Saúde natural para os seus cabelos</h1>
+            <h2 class="title">Saúde natural para os seus cabelos</h2>
             <p>
               Um salão exclusivo em São Paulo, especializado em tratamentos
               naturais.
@@ -37,6 +42,14 @@
             <a href="#" class="button">Agendar um horário</a>
           </div>
         </div>
+      </section>
+      <div class="divider-1"></div>
+      <section class="section" id="about">
+        <div class="container grid">Sobre</div>
+      </section>
+
+      <section class="section" id="services">
+        <div class="container grid">Services</div>
       </section>
     </main>
   </body>
