--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <title>BeutyBilu</title>
   </head>
   <body>
-    <header id="header">
-      <nav class="container show">
+    <header id="header" class="scroll">
+      <nav class="container sho">
         <a class="logo" href="#">Beauty<span>Bilu</span>.</a>
         <div class="menu">
           <ul class="grid">
@@ -34,26 +34,29 @@
         <div class="toggle close"><i class="fas fa-times"></i></div>
       </nav>
     </header>
-
+    <!-------------------------------------home---------------------------------------------->
     <main>
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
             <img
-              src="https://s2.glbimg.com/2yK3rTPvEDofzpusIhAgrkasz9A=/e.glbimg.com/og/ed/f/original/2019/09/30/oriontree_fairbairn_960.jpg"
+              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
             />
           </div>
           <div class="text">
             <h2 class="title">Saúde natural para os seus cabelos</h2>
             <p>
-              Um salão exclusivo em São Paulo, especializado em tratamentos
-              naturais.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+              possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
+              ullam iste explicabo rerum aspernatur provident accusamus vero.
+              Architecto, illum sapiente.
             </p>
             <a href="#" class="button">Agendar um horário</a>
           </div>
         </div>
       </section>
       <div class="divider-1"></div>
+      <!-------------------------------------About---------------------------------------------->
 
       <section class="section" id="about">
         <div class="container grid">
@@ -90,9 +93,117 @@
         </div>
       </section>
 
+      <div class="divider-2"></div>
+      <!-------------------------------------Services---------------------------------------------->
+
       <section class="section" id="services">
-        <div class="container grid">Services</div>
+        <div class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>
+              Com mais de 10 anos no mercado, o Beauty<strong>Bilu</strong>. já
+              conquistou clientes de inúmeros países com seus tratamentos
+              exclusivos e totalmente naturais
+            </p>
+          </header>
+          <div class="card">
+            <i class="far fa-paper-plane"></i>
+            <h3 class="title">Terapia Capilar</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+              possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
+              ullam iste explicabo rerum aspernatur provident accusamus vero.
+              Architecto, illum sapiente.
+            </p>
+          </div>
+          <div class="card">
+            <i class="fas fa-cut"></i>
+            <h3 class="title">Cortes</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+              possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
+              ullam iste explicabo rerum aspernatur provident accusamus vero.
+              Architecto, illum sapiente.
+            </p>
+          </div>
+          <div class="card">
+            <i class="far fa-angry"></i>
+            <h3 class="title">Tratamentos</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+              possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
+              ullam iste explicabo rerum aspernatur provident accusamus vero.
+              Architecto, illum sapiente.
+            </p>
+          </div>
+        </div>
       </section>
+      <div class="divider-1"></div>
+
+      <!-------------------------------------Testimonials---------------------------------------------->
+      <section class="section" id="testimonials">
+        <div class="container grid">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="testimonials">
+            <div class="testimonial">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                  perferendis itaque unde, quo accusamus laborum cupiditate
+                  voluptas
+                </p>
+                <cite>
+                  <img
+                    src="https://randomuser.me/api/portraits/women/10.jpg"
+                    alt=""
+                  />
+                  James hetfield
+                </cite>
+              </blockquote>
+            </div>
+
+            <div class="testimonial">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                  perferendis itaque unde, quo accusamus laborum cupiditate
+                  voluptas
+                </p>
+                <cite>
+                  <img
+                    src="https://randomuser.me/api/portraits/men/85.jpg"
+                    alt=""
+                  />
+                  Rublilu Rocha
+                </cite>
+              </blockquote>
+            </div>
+
+            <div class="testimonial">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                  perferendis itaque unde, quo accusamus laborum cupiditate
+                  voluptas
+                </p>
+                <cite>
+                  <img
+                    src="https://randomuser.me/api/portraits/women/25.jpg"
+                    alt=""
+                  />
+                  Maria da silva
+                </cite>
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-------------------------------------Contact---------------------------------------------->
     </main>
 
     <script src="main.js"></script>
