--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!----swiper-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        
+    <!----fonts-->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -14,6 +16,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+<!----css-->
+<link rel="stylesheet" href="css/style.css" />
 
     <title>BeutyBilu</title>
   </head>
@@ -146,44 +153,62 @@
           <header>
             <h2 class="title">Depoimentos de quem já passou por aqui</h2>
           </header>
-          <div class="testimonials">
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  <span>&ldquo;</span>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
-                  perferendis itaque unde, quo accusamus laborum cupiditate
-                  voluptas
-                </p>
-                <cite>
-                  <img
-                    src="https://randomuser.me/api/portraits/women/10.jpg"
-                    alt=""
-                  />
-                  James hetfield
-                </cite>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
-              <blockquote>
-                <p>
-                  <span>&ldquo;</span>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
-                  perferendis itaque unde, quo accusamus laborum cupiditate
-                  voluptas
-                </p>
-                <cite>
-                  <img
-                    src="https://randomuser.me/api/portraits/men/85.jpg"
-                    alt=""
-                  />
-                  Rublilu Rocha
-                </cite>
-              </blockquote>
-            </div>
-
-            <div class="testimonial">
+          <div class="testimonials swiper-container">
+            <div class="swiper-wrapper">
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                    perferendis itaque unde, quo accusamus laborum cupiditate
+                    voluptas
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/women/10.jpg"
+                      alt=""
+                    />
+                    James hetfield
+                  </cite>
+                </blockquote>
+              </div>
+  
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                    perferendis itaque unde, quo accusamus laborum cupiditate
+                    voluptas
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/men/85.jpg"
+                      alt=""
+                    />
+                    Rublilu Rocha
+                  </cite>
+                </blockquote>
+              </div>
+  
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                    perferendis itaque unde, quo accusamus laborum cupiditate
+                    voluptas
+                  </p>
+                  <cite>
+                    <img
+                      src="https://randomuser.me/api/portraits/men/85.jpg"
+                      alt=""
+                    />
+                    Rublilu Rocha
+                  </cite>
+                </blockquote>
+              </div>
+            
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
@@ -200,12 +225,16 @@
                 </cite>
               </blockquote>
             </div>
+
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </section>
       <!-------------------------------------Contact---------------------------------------------->
     </main>
-
+        <!----swiper-->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <!----main.js-->
     <script src="main.js"></script>
   </body>
 </html>
