--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!----swiper-->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-        
+
     <!----fonts-->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap"
@@ -16,17 +19,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-<!----css-->
-<link rel="stylesheet" href="css/style.css" />
+    <!----css-->
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>BeutyBilu</title>
   </head>
   <body>
     <header id="header" class="scroll">
-      <nav class="container sho">
+      <nav class="container show">
         <a class="logo" href="#">Beauty<span>Bilu</span>.</a>
         <div class="menu">
           <ul class="grid">
@@ -149,7 +152,7 @@
 
       <!-------------------------------------Testimonials---------------------------------------------->
       <section class="section" id="testimonials">
-        <div class="container grid">
+        <div class="container">
           <header>
             <h2 class="title">Depoimentos de quem já passou por aqui</h2>
           </header>
@@ -159,9 +162,9 @@
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
-                    perferendis itaque unde, quo accusamus laborum cupiditate
-                    voluptas
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Est perferendis itaque unde, quo accusamus laborum
+                    cupiditate voluptas
                   </p>
                   <cite>
                     <img
@@ -172,14 +175,14 @@
                   </cite>
                 </blockquote>
               </div>
-  
+
               <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
-                    perferendis itaque unde, quo accusamus laborum cupiditate
-                    voluptas
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Est perferendis itaque unde, quo accusamus laborum
+                    cupiditate voluptas
                   </p>
                   <cite>
                     <img
@@ -190,14 +193,14 @@
                   </cite>
                 </blockquote>
               </div>
-  
+
               <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
-                    perferendis itaque unde, quo accusamus laborum cupiditate
-                    voluptas
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Est perferendis itaque unde, quo accusamus laborum
+                    cupiditate voluptas
                   </p>
                   <cite>
                     <img
@@ -208,7 +211,7 @@
                   </cite>
                 </blockquote>
               </div>
-            
+
               <blockquote>
                 <p>
                   <span>&ldquo;</span>
@@ -230,11 +233,42 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-2"></div>
       <!-------------------------------------Contact---------------------------------------------->
+      <section class="section" id="contact">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et iure
+              omnis tempora, officiis
+            </p>
+            <a
+              href=" https://api.whatsapp.com/send?phone=+5599999999999&text=HelloWorld!"
+              class="button"
+              target="_blank"
+              ><i class="fab fa-whatsapp"></i>Entrar em contato</a
+            >
+          </div>
+
+          <div class="links">
+            <ul class="grid">
+              <li><i class="fas fa-phone-alt"></i>99 99999-9999</li>
+              <li>
+                <i class="fas fa-map-marker-alt"></i>R. Galdino Pires, 423B
+              </li>
+              <li><i class="fas fa-envelope"></i>beauty@bilu.com</li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
-        <!----swiper-->
+    <!----swiper-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-        <!----main.js-->
+    <!----scrollreveal-->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!----main.js-->
     <script src="main.js"></script>
   </body>
 </html>
