part four conclued

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header id="header" class="scroll">
-      <nav class="container show">
+      <nav class="container sho">
         <a class="logo" href="#">Beauty<span>Bilu</span>.</a>
         <div class="menu">
           <ul class="grid">
@@ -171,7 +171,7 @@
                       src="https://randomuser.me/api/portraits/women/10.jpg"
                       alt=""
                     />
-                    James hetfield
+                    Maria Rocha
                   </cite>
                 </blockquote>
               </div>
@@ -204,10 +204,10 @@
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/men/85.jpg"
+                      src="https://randomuser.me/api/portraits/women/33.jpg"
                       alt=""
                     />
-                    Rublilu Rocha
+                    Valeska Silva
                   </cite>
                 </blockquote>
               </div>
@@ -263,7 +263,34 @@
           </div>
         </div>
       </section>
+
+      <div class="divider-1"></div>
     </main>
+
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home">Beauty<span>Bilu</span>.</a>
+          <p>©2021 BeautyBilu.</p>
+          <p>Todos os direitos reservados</p>
+        </div>
+
+        <div class="social">
+          <a href="https://instagram.com" target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://facebook.com" target="_blank"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://youtube.com" target="_blank"
+            ><i class="fab fa-youtube"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
+
     <!----swiper-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!----scrollreveal-->
