--- a/index.html
+++ b/index.html
@@ -116,35 +116,37 @@
               exclusivos e totalmente naturais
             </p>
           </header>
-          <div class="card">
-            <i class="far fa-paper-plane"></i>
-            <h3 class="title">Terapia Capilar</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
-              possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
-              ullam iste explicabo rerum aspernatur provident accusamus vero.
-              Architecto, illum sapiente.
-            </p>
-          </div>
-          <div class="card">
-            <i class="fas fa-cut"></i>
-            <h3 class="title">Cortes</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
-              possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
-              ullam iste explicabo rerum aspernatur provident accusamus vero.
-              Architecto, illum sapiente.
-            </p>
-          </div>
-          <div class="card">
-            <i class="far fa-angry"></i>
-            <h3 class="title">Tratamentos</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
-              possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
-              ullam iste explicabo rerum aspernatur provident accusamus vero.
-              Architecto, illum sapiente.
-            </p>
+          <div class="cards grid">
+            <div class="card">
+              <i class="far fa-paper-plane"></i>
+              <h3 class="title">Terapia Capilar</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+                possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
+                ullam iste explicabo rerum aspernatur provident accusamus vero.
+                Architecto, illum sapiente.
+              </p>
+            </div>
+            <div class="card">
+              <i class="fas fa-cut"></i>
+              <h3 class="title">Cortes</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+                possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
+                ullam iste explicabo rerum aspernatur provident accusamus vero.
+                Architecto, illum sapiente.
+              </p>
+            </div>
+            <div class="card">
+              <i class="far fa-angry"></i>
+              <h3 class="title">Tratamentos</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+                possimus maxime ut mollitia. Nihil aliquid, unde officia ad quo
+                ullam iste explicabo rerum aspernatur provident accusamus vero.
+                Architecto, illum sapiente.
+              </p>
+            </div>
           </div>
         </div>
       </section>
